[package]
name = "gamehack_librs"
version = "0.1.0"
edition = "2024"


[dependencies]
windows = { version = "0.62.2", features = [
	"Win32_Foundation",
	"Win32_System_Threading",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_WindowsProgramming",
	"Win32_System_Kernel",
	"Wdk_System_SystemInformation",
	"Wdk_System_Threading",
	"Win32_System_Memory",
	"Win32_System_ProcessStatus",
] }
